Bug 922368 - Check for features instead of framebuffer_blit extensions. r=bjacob