gfx/gl/GLContextUtils.cpp
@@ -280,8 +280,7 @@ GLContext::BlitFramebufferToFramebuffer(GLuint srcFB, GLuint destFB,
     MOZ_ASSERT(!srcFB || fIsFramebuffer(srcFB));
     MOZ_ASSERT(!destFB || fIsFramebuffer(destFB));
 
-    MOZ_ASSERT(IsExtensionSupported(EXT_framebuffer_blit) ||
-               IsExtensionSupported(ANGLE_framebuffer_blit));
+    MOZ_ASSERT(IsSupported(GLFeature::framebuffer_blit));
 
     ScopedBindFramebuffer boundFB(this);
     ScopedGLState scissor(this, LOCAL_GL_SCISSOR_TEST, false);
@@ -303,10 +302,8 @@ GLContext::BlitFramebufferToFramebuffer(GLuint srcFB, GLuint destFB,
 {
     MOZ_ASSERT(!srcFB || fIsFramebuffer(srcFB));
     MOZ_ASSERT(!destFB || fIsFramebuffer(destFB));
-
-    if (IsExtensionSupported(EXT_framebuffer_blit) ||
-        IsExtensionSupported(ANGLE_framebuffer_blit))
-    {
+    
+    if (IsSupported(GLFeature::framebuffer_blit)) {
         BlitFramebufferToFramebuffer(srcFB, destFB,
                                      srcSize, destSize);
         return;
@@ -330,9 +327,7 @@ GLContext::BlitTextureToFramebuffer(GLuint srcTex, GLuint destFB,
     MOZ_ASSERT(fIsTexture(srcTex));
     MOZ_ASSERT(!destFB || fIsFramebuffer(destFB));
 
-    if (IsExtensionSupported(EXT_framebuffer_blit) ||
-        IsExtensionSupported(ANGLE_framebuffer_blit))
-    {
+    if (IsSupported(GLFeature::framebuffer_blit)) {
         ScopedFramebufferForTexture srcWrapper(this, srcTex, srcTarget);
         MOZ_ASSERT(srcWrapper.IsComplete());
 
@@ -452,9 +447,7 @@ GLContext::BlitFramebufferToTexture(GLuint srcFB, GLuint destTex,
     MOZ_ASSERT(!srcFB || fIsFramebuffer(srcFB));
     MOZ_ASSERT(fIsTexture(destTex));
 
-    if (IsExtensionSupported(EXT_framebuffer_blit) ||
-        IsExtensionSupported(ANGLE_framebuffer_blit))
-    {
+    if (IsSupported(GLFeature::framebuffer_blit)) {
         ScopedFramebufferForTexture destWrapper(this, destTex, destTarget);
 
         BlitFramebufferToFramebuffer(srcFB, destWrapper.FB(),
